

message AuthMessage {
	enum Type { CHALLENGE = 1; RESPONSE = 2; TOKEN = 3; HELLO = 4; ERROR = 5;}	
	required Type type = 1;
    required string name = 2;
    optional string nonce = 3;
    optional string challenge = 4;
    optional string response = 5;
    optional string token = 6;
    optional string error_message = 7;
}
